--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@dot/env": "^0.1.5",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
     "express": "^4.21.0",
@@ -11,7 +12,8 @@
     "multer": "^1.4.5-lts.1",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
-    "pm2": "^5.4.2"
+    "pm2": "^5.4.2",
+    "razorpay": "^2.9.4"
   },
   "scripts": {
     "dev": "nodemon app.js",
