--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
     "express": "^4.21.0",
     "express-session": "^1.18.0",
+    "express-validator": "^7.2.0",
+    "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.2",
     "morgan": "^1.10.0",
@@ -13,7 +16,8 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "pm2": "^5.4.2",
-    "razorpay": "^2.9.4"
+    "razorpay": "^2.9.4",
+    "validator": "^13.12.0"
   },
   "scripts": {
     "dev": "nodemon app.js",
