--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.0",
+    "express-rate-limit": "^7.4.1",
     "express-session": "^1.18.0",
     "express-validator": "^7.2.0",
     "helmet": "^7.1.0",
@@ -16,6 +17,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "pm2": "^5.4.2",
+    "rate-limit-mongo": "^2.3.2",
     "razorpay": "^2.9.4",
     "validator": "^13.12.0"
   },
