--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.3",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "express": "^4.21.0",
     "express-rate-limit": "^7.4.1",
@@ -19,7 +20,8 @@
     "pm2": "^5.4.2",
     "rate-limit-mongo": "^2.3.2",
     "razorpay": "^2.9.4",
-    "validator": "^13.12.0"
+    "validator": "^13.12.0",
+    "winston": "^3.15.0"
   },
   "scripts": {
     "dev": "nodemon app.js",
